Fix nested fork identity and await actual worker completion